# Sprottenflotte_Prediction

./: .gitignore  AUTHORS  README.md  app.py  app_functions.py  data.py  predictions_dl.py  predictions_rf.py  pyproject.toml
.streamlit/: config.toml
data/: data_temp.csv  predictions_dl.csv  predictions_rf.csv  stations.csv  weather_data_temp.csv  weather_stations.csv
models/: 5pred_biLSTM_whole_ver2_weights.pth  scaler_X_ver2.joblib  scaler_rf.joblib  scaler_y_ver2.joblib
